legion v0.0.1 (Release data: 2021-04-09)
=======

Changes:
* Imported ves() and vets() functions from smooth package.
* We now have explicit lags parameter in ves() and vets().
* First working version of vets().
* architectorVETS in vets() - internal function needed for selector.
* vets() and ves() now support model selection.
* vets() now has a proper likelihood estimation and implementation of multiplicative error model.
* ves() now also has a proper MLE.
* Parameter "silent" can now only be TRUE or FALSE.
* auto.vets() function, selecting PIC elements via I->P->C.
* plot() method for ves() and vets(). Currently only produces plots 1 and 4-7.
* The MLE for Error="M" now involves optimising Sigma matrix after parameters estimation.

Bugfixes:
*